Updated notebook title and descriptions for clarity.

--- a/notebooks/PLP_RAG_Query_Response.ipynb
+++ b/notebooks/PLP_RAG_Query_Response.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "source": [
     "\n",
-    "# PLP Backend: Query–Response RAG Skeleton (with optional CoT-style reasoning)\n",
+    "# PLP Backend: Query–Response RAG Pipeline (with optional CoT-style reasoning)\n",
     "\n",
-    "This notebook provides a minimal, **fully runnable** backend skeleton for your Personal Learning Portal (PLP) in **Corporate Finance**.  \n",
+    "This notebook provides a minimal, **fully runnable** backend backbone for the Personal Learning Portal (PLP) in **Corporate Finance**.  \n",
     "It implements:\n",
     "- Lightweight **ingestion → chunking → vector retrieval** (TF–IDF + cosine)\n",
     "- A simple **answer synthesizer** that cites sources\n",
     "- Optional, visible **“Reasoning steps” (CoT-style)** for teaching/learning transparency\n",
     "- Clean Python API: `answer(query, k=4, show_steps=True)`\n",
     "\n",
-    "> No external APIs are required. You can later swap the vectorizer/LLM with your preferred stack (e.g., sentence-transformers + OpenAI) while keeping the same pipeline shape.\n"
+    "> No external APIs are required. Users can later swap the vectorizer/LLM with their preferred stack (e.g., sentence-transformers + OpenAI) while keeping the same pipeline shape.\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "\n",
     "## 1. Toy Learning Corpus (Corporate Finance)\n",
     "Below we create a **small, local corpus** with metadata so the pipeline runs end-to-end without internet.  \n",
-    "Replace/extend this with your Phase‑3 curated sources (e.g., `data/corpus_sources.json` + actual text).\n"
+    "Replace/extend this with the Phase‑3 curated sources (e.g., `data/corpus_sources.json` + actual text).\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# ==== 1. In-memory corpus (replace with your own) ====\n",
+    "# ==== 1. In-memory corpus (replace with others) ====\n",
     "\n",
     "toy_corpus = [\n",
     "    {\n",
@@ -244,7 +244,7 @@
     "        bullet_evidence.append(f\"- [{ch.doc_id}] {snippet} (score={score:.3f})\")\n",
     "\n",
     "    # Very simple \"generation\": stitch relevant pieces\n",
-    "    # In practice, replace with your LLM call and keep citations.\n",
+    "    # In practice, replace with other LLM call and keep citations.\n",
     "    top_texts = \" \".join([ch.text for ch, _ in retrieved])\n",
     "\n",
     "    # Heuristic: if WACC mentioned, include formula; if NPV/IRR mentioned, add usage\n",
@@ -313,8 +313,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 5. (Optional) Extend: Ingest Your Own Corpus\n",
-    "Use `ingest_documents()` to add your texts (e.g., from SEC filings, textbooks).  \n",
+    "## 5. (Optional) Extend: Ingest Customized Corpus\n",
+    "Use `ingest_documents()` to add texts (e.g., from SEC filings, textbooks).  \n",
     "Rebuild the index with `rebuild_index()`.\n"
    ]
   },
